--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,15 @@
 <ion-content class="ion-text-center">
   <h1 class="ion-text-center">
-    <ion-icon></ion-icon>
+    <ion-icon src="assets/icon/boi.svg"></ion-icon>
   </h1>
 
-  <h1 class="ion-text-center"></h1>
+  <h1 class="ion-text-center">
+    Bem-vindo ao Curral Digital
+  </h1>
+
+  <h1 class="ion-text-center">
+    Acompanhe a evolução dos seus animais e melhore sua produção
+  </h1>
+
+  <ion-button color="danger">Começar</ion-button>
 </ion-content>
