--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,23 +1,98 @@
-
 <ion-content class="ion-padding">
   <h1 class="ion-text-center">
-    <ion-icon src="assets/icon/boi.svg"></ion-icon>
+    <ion-icon
+      src="assets/icon/boi.svg"
+      class="icon-7em"
+    ></ion-icon>
   </h1>
+  <form
+    [formGroup]="authForm"
+    (submit)="onSubmit()"
+  >
 
-  <form [formGroup]="authForm" (submit)="onSubmit()">
+    <ng-container *ngIf="!configs.isSignIn">
+      <ion-item>
+        <ion-input
+          type="text"
+          placeholder="Nome"
+          formControlName="name"
+        ></ion-input>
+        <ion-note
+          slot="end"
+          color="danger"
+          *ngIf="name.dirty && name.hasError('required')"
+        >
+          Obrigatório
+        </ion-note>
+        <ion-note
+          slot="end"
+          color="danger"
+          *ngIf="name.dirty && name.hasError('minlength')"
+        >
+          Mín 3 caracteres
+        </ion-note>
+      </ion-item>
+    </ng-container>
+
     <ion-item>
-      <ion-input type="email" placeholder="Email" inputmode="email" formControlName="email"></ion-input>
-      <ion-note color="danger" slot="end" *ngIf="email.dirty && email.hasError('required')">Obrigatório</ion-note>
-      <ion-note color="danger" slot="end" *ngIf="email.dirty && email.hasError('email')">Email inválido</ion-note>
+      <ion-input
+        type="email"
+        placeholder="Email"
+        formControlName="email"
+        inputmode="email"
+        autofocus="true"
+      ></ion-input>
+      <ion-note
+        slot="end"
+        color="danger"
+        *ngIf="email.dirty && email.hasError('required')"
+      >
+        Obrigatório
+      </ion-note>
+      <ion-note
+        slot="end"
+        color="danger"
+        *ngIf="email.dirty && email.hasError('email')"
+      >
+        Email inválido
+      </ion-note>
     </ion-item>
-
     <ion-item>
-      <ion-input type="password" placeholder="Senha" inputmode="password" formControlName="password"></ion-input>
-      <ion-note color="danger" slot="end" *ngIf="password.dirty && password.hasError('required')">Obrigatório</ion-note>
-      <ion-note color="danger" slot="end" *ngIf="password.dirty && password.hasError('minlength')">Mín. 6 caracteres</ion-note>
+      <ion-input
+        type="password"
+        placeholder="Senha"
+        formControlName="password"
+      ></ion-input>
+      <ion-note
+        slot="end"
+        color="danger"
+        *ngIf="password.dirty && password.hasError('required')"
+      >
+        Obrigatório
+      </ion-note>
+      <ion-note
+        slot="end"
+        color="danger"
+        *ngIf="password.dirty && password.hasError('minlength')"
+      >
+        Mín. 6 caracteres
+      </ion-note>
     </ion-item>
-
-    <ion-button type="submit" expand="block" fill="clear" [disabled]="authForm.invalid">Login</ion-button>
-    <ion-button expand="block"  fill="clear">Cadastre-se</ion-button>
+    <ion-button
+      expand="block"
+      type="submit"
+      fill="clear"
+      [disabled]="authForm.invalid"
+    >
+      {{ configs.action }}
+    </ion-button>
   </form>
+
+  <ion-button
+    expand="block"
+    fill="clear"
+    (click)="changeAuthAction()"
+  >
+    {{ configs.actionChange }}
+  </ion-button>
 </ion-content>
