--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -7,7 +7,7 @@
   </h1>
   <form
     [formGroup]="authForm"
-    (submit)="onSubmit()"
+    (submit)="onSubmit(authProviders.Email)"
   >
 
     <ng-container *ngIf="!configs.isSignIn">
