--- a/src/app/auth/login/login.page.scss
+++ b/src/app/auth/login/login.page.scss
@@ -1,3 +1,7 @@
+ion-content {
+  --ion-background-color: #8bc24c;
+}
+
 h1 ion-icon {
   background-color: #f29c2b;
   padding: 0.8em;
@@ -5,3 +9,5 @@ h1 ion-icon {
   width: 5em;
   height: 5em;
 }
+
+
