--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,3 +1,9 @@
+<ion-header>
+    <ion-buttons>
+      <ion-back-button defaultHref="/home"></ion-back-button>
+    </ion-buttons>
+</ion-header>
+
 <ion-content class="ion-padding">
   <h1 class="ion-text-center">
     <ion-icon
