--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,5 +11,5 @@
     Acompanhe a evolução dos seus animais e melhore sua produção
   </h1>
 
-  <ion-button color="danger">Começar</ion-button>
+  <ion-button color="danger" routerLink="/login">Começar</ion-button>
 </ion-content>
