--- a/src/app/auth/login/login.page.scss
+++ b/src/app/auth/login/login.page.scss
@@ -2,12 +2,12 @@ ion-content {
   --ion-background-color: #8bc24c;
 }
 
-h1 ion-icon {
-  background-color: #f29c2b;
-  padding: 0.8em;
-  border-radius: 50%;
-  width: 5em;
-  height: 5em;
+h1 {
+  ion-icon {
+    background-color: #f29c2b;
+    padding: 0.8em;
+    border-radius: 50%;
+    width: 5em;
+    height: 5em;
+  }
 }
-
-
