--- a/src/app/main/page/main.page.html
+++ b/src/app/main/page/main.page.html
@@ -6,6 +6,15 @@
 </ion-header>
 
 <ion-content >
+  <ion-tab-bar >
+    <ion-tab-button tab="macho">
+      <h3>M</h3>
+    </ion-tab-button>
+
+    <ion-tab-button tab="femea">
+      <h3>F</h3>
+    </ion-tab-button>
+  </ion-tab-bar>
   <ion-button routerLink="/main/animal-list">Lista</ion-button>
   <ion-button routerLink="/main/create">Novo animal</ion-button>
 </ion-content>
