--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -7,7 +7,7 @@
 <ion-content class="ion-padding">
   <h1 class="ion-text-center">
     <ion-icon
-      src="assets/icon/boi.svg"
+      src="assets/icon/cerca.svg"
       class="icon-7em"
     ></ion-icon>
   </h1>
@@ -20,7 +20,7 @@
       <ion-item>
         <ion-input
           type="text"
-          placeholder="Nome"
+          placeholder="Apelido do Curral"
           formControlName="name"
         ></ion-input>
         <ion-note
