--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,15 +1,19 @@
 <ion-content class="ion-text-center">
-  <h1 class="ion-text-center">
-    <ion-icon src="assets/icon/boi.svg"></ion-icon>
-  </h1>
+  <ion-grid>
+    <ion-row class="ion-justify-content-center">
+      <ion-col size-sm="8" size-md="4" size-lg="3" size-xl="3">
+        <h1 class="ion-text-center">
+          <ion-icon src="assets/icon/boi.svg"></ion-icon>
+        </h1>
 
-  <h1 class="ion-text-center">
-    Bem-vindo ao Curral Digital
-  </h1>
+        <h1 class="ion-text-center">Bem-vindo ao Curral Digital</h1>
 
-  <h1 class="ion-text-center">
-    Acompanhe a evolução dos seus animais e melhore sua produção
-  </h1>
+        <h1 class="ion-text-center">
+          Acompanhe a evolução dos seus animais e melhore sua produção
+        </h1>
 
-  <ion-button color="danger" routerLink="/login">Começar</ion-button>
+        <ion-button color="danger" routerLink="/login">Começar</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
