--- a/src/app/main/macho-save/macho-save.page.html
+++ b/src/app/main/macho-save/macho-save.page.html
@@ -10,10 +10,10 @@
     <ion-icon src="assets/icon/boi.svg" class="icon-7em"></ion-icon>
   </h1>
 
-  <form [formGroup]="animalForm" (submit)="onSubmit()">
+  <form [formGroup]="maleForm" (submit)="onSubmit()">
     <ion-item>
       <ion-icon src="assets/icon/tag.svg" slot="start"></ion-icon>
-      <ion-label>Nº do Brinco</ion-label>
+      <ion-label>Nº do Brinco:</ion-label>
       <ion-input
         type="text"
         autofocus="true"
@@ -21,9 +21,9 @@
         formControlName="brinco"
       ></ion-input>
     </ion-item>
-    <ion-item>
+    <ion-item >
       <ion-icon name="barbell" slot="start"></ion-icon>
-      <ion-label>Peso</ion-label>
+      <ion-label>Peso:</ion-label>
       <ion-input
         type="number"
         autofocus="true"
@@ -33,47 +33,32 @@
     </ion-item>
     <ion-item>
       <ion-icon name="calendar" slot="start"></ion-icon>
-      <ion-label>Data de Nascimento</ion-label>
+      <ion-label>Data de Nascimento:</ion-label>
       <ion-input
         type="date"
         autofocus="true"
         formControlName="nascimento"
+        slot="end"
       ></ion-input>
     </ion-item>
     <ion-item>
       <ion-icon name="calendar" slot="start"></ion-icon>
-      <ion-label>Data de Apartação</ion-label>
+      <ion-label>Data de Apartação:</ion-label>
       <ion-input
         type="date"
         autofocus="true"
-        formControlName="apartação"
-      ></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-icon name="calendar" slot="start"></ion-icon>
-      <ion-label>Data de Monta/IA</ion-label>
-      <ion-input
-        type="date"
-        autofocus="true"
-        formControlName="monta"
-      ></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-icon name="calendar" slot="start"></ion-icon>
-      <ion-label>Data de Parto</ion-label>
-      <ion-input
-        type="date"
-        autofocus="true"
-        formControlName="parto"
+        formControlName="nascimento"
+        slot="end"
       ></ion-input>
     </ion-item>
 
-    <ion-button (click)="saveVacinas()"> Vacinas </ion-button>
 
-    <ion-button (click)="montasAndPartos()"> Montas e Partos </ion-button>
 
-    <ion-button type="submit" [disabled]="animalForm.invalid" expand="full"
-      >Salvar</ion-button
+    <ion-button (click)="saveVacinas()">Vacinas</ion-button>
+
+    <ion-button type="submit" [disabled]="maleForm.invalid" expand="full" fill="clear">Salvar</ion-button
     >
+
+   
   </form>
 </ion-content>
