--- a/src/app/main/page/main.page.html
+++ b/src/app/main/page/main.page.html
@@ -1,7 +1,6 @@
 <ion-header>
   <ion-toolbar>
-
-    <ion-title>Main</ion-title>
+    <app-menu-toggle slot="start" menu="main-menu"></app-menu-toggle>
   </ion-toolbar>
 </ion-header>
 
@@ -15,6 +14,8 @@
       <h3>F</h3>
     </ion-tab-button>
   </ion-tab-bar>
-  <ion-button routerLink="/main/animal-list">Lista</ion-button>
-  <ion-button routerLink="/main/create">Novo animal</ion-button>
+  <ion-button routerLink="/main/female-list">Lista Fêmeas</ion-button>
+  <ion-button routerLink="/main/create-female">Nova Fêmea</ion-button>
+  <ion-button routerLink="/main/male-list">Lista Macho</ion-button>
+  <ion-button routerLink="/main/create-male">Novo Macho</ion-button>
 </ion-content>
