--- a/src/app/main/macho-save/macho-save.page.html
+++ b/src/app/main/macho-save/macho-save.page.html
@@ -47,7 +47,7 @@
       <ion-input
         type="date"
         autofocus="true"
-        formControlName="nascimento"
+        formControlName="apartação"
         slot="end"
       ></ion-input>
     </ion-item>
@@ -58,7 +58,5 @@
 
     <ion-button type="submit" [disabled]="maleForm.invalid" expand="full" fill="clear">Salvar</ion-button
     >
-
-   
   </form>
 </ion-content>
