Adição dos cards(não funcionando, assim como a vacina)

--- a/src/app/main/macho-save/macho-save.page.html
+++ b/src/app/main/macho-save/macho-save.page.html
@@ -51,10 +51,7 @@
         slot="end"
       ></ion-input>
     </ion-item>
-
-
-
-    <ion-button (click)="saveVacinas()">Vacinas</ion-button>
+    <ion-button (click)="onVacina(maleId)">Vacinas</ion-button>
 
     <ion-button type="submit" [disabled]="maleForm.invalid" expand="full" fill="clear">Salvar</ion-button
     >
