--- a/src/app/main/page/main.page.scss
+++ b/src/app/main/page/main.page.scss
@@ -1,1 +1,15 @@
+ion-card{
+  background-color: #de4307;
 
+  ion-card-content{
+    color: white;
+
+    h1{
+      color:white;
+    }
+
+    p{
+      color:white;
+    }
+  }
+}
