--- a/src/app/main/page/main.page.html
+++ b/src/app/main/page/main.page.html
@@ -1,21 +1,38 @@
 <ion-header>
   <ion-toolbar>
-    <app-menu-toggle slot="start" menu="main-menu"></app-menu-toggle>
+    <app-menu-toggle
+      slot="start"
+      menu="main-menu"
+    ></app-menu-toggle>
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
-  <ion-tab-bar >
-    <ion-tab-button tab="macho">
-      <h3>M</h3>
-    </ion-tab-button>
+<ion-content class="ion-padding">
 
-    <ion-tab-button tab="femea">
-      <h3>F</h3>
-    </ion-tab-button>
-  </ion-tab-bar>
-  <ion-button routerLink="/main/female-list">Lista Fêmeas</ion-button>
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="6">
+        <ion-card>
+          <ion-card-content>Você possui
+             <h1 ></h1>
+             machos
+
+             <p routerLink="/main/male-list">Confira a lista</p>
+          </ion-card-content>
+        </ion-card>
+
+      </ion-col>
+      <ion-col size="6">
+
+        <ion-card>
+          <ion-card-content>Você possui <h1>40</h1> fêmeas
+          <p routerLink="/main/female-list">Confira a lista</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
   <ion-button routerLink="/main/create-female">Nova Fêmea</ion-button>
-  <ion-button routerLink="/main/male-list">Lista Macho</ion-button>
   <ion-button routerLink="/main/create-male">Novo Macho</ion-button>
 </ion-content>
