--- a/src/app/main/vacinas/vacinas.page.html
+++ b/src/app/main/vacinas/vacinas.page.html
@@ -1,18 +1,44 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>vacinas</ion-title>
+    <ion-back-button slot="start" ></ion-back-button>
+    <ion-title>Vacinas</ion-title>
+
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <form [formGroup]="vacinaForm" (submit)="onSubmit()">
-    <ion-item>
-    <ion-label>Teste</ion-label>
-    <ion-input type="text" placeholder="Awesome Input" formControlName="nome" #awesome></ion-input>
-  </ion-item>
-
-  <ion-button type="submit" (click)="submit(awesome.value)">
-    Click me
-  </ion-button>
+<ion-content class="ion-padding">
+  <form [formGroup]="vacinaForm">
+    <ion-list>
+      <ion-item>
+        <ion-input
+          placeholder="Nome"
+          type="text"
+          formControlName="nome"
+          #nome
+        ></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input
+          placeholder="Data"
+          type="date"
+          formControlName="data"
+          #data
+        ></ion-input>
+      </ion-item>
+    </ion-list>
+    <ion-button
+      class="submit-btn"
+      type="submit"
+      (click)="saveVacina()"
+    >
+      Salvar
+    </ion-button>
   </form>
+
+    <ion-list >
+      <app-vacina
+        *ngFor="let vacina of (vacina$ | async)"
+        [vacina]="vacina"
+      ></app-vacina>
+  </ion-list>
 </ion-content>
