--- a/src/app/main/animals-save/animals-save.page.html
+++ b/src/app/main/animals-save/animals-save.page.html
@@ -55,7 +55,7 @@
 
     <ion-button (click)="montasAndPartos()"> Montas e Partos </ion-button>
 
-    <ion-button type="submit" [disabled]="animalForm.invalid" expand="full"
+    <ion-button type="submit" [disabled]="animalForm.invalid" expand="full" fill="clear"
       >Salvar</ion-button
     >
   </form>
