--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <ion-app>
-
   <ion-menu contentId="menu-content" menuId="main-menu" [disabled]="true">
     <ion-header>
       <ion-toolbar>
@@ -11,14 +10,23 @@
     <ion-content>
       <ion-menu-toggle autoHide="false">
         <ion-list>
-        <ion-item button (click)="logout()">
-    <ion-icon slot="icon-only"></ion-icon>
-    <ion-label>Sair</ion-label>
-  </ion-item>
-      </ion-list>
+
+          <ion-item button routerLink="/main/male-list">
+            <ion-icon slot="icon-only"></ion-icon>
+            <ion-label>Lista de Machos</ion-label>
+          </ion-item>
+
+          <ion-item button routerLink="/main/female-list">
+            <ion-icon slot="icon-only"></ion-icon>
+            <ion-label>Lista de Femeas</ion-label>
+          </ion-item>
+          <ion-item button (click)="logout()">
+            <ion-icon slot="icon-only"></ion-icon>
+            <ion-label>Sair</ion-label>
+          </ion-item>
+        </ion-list>
       </ion-menu-toggle>
     </ion-content>
-
   </ion-menu>
   <ion-router-outlet id="menu-content"></ion-router-outlet>
 </ion-app>
