--- a/src/app/main/components/animal-item/animal-item.component.html
+++ b/src/app/main/components/animal-item/animal-item.component.html
@@ -4,8 +4,8 @@
   </ion-item>
 
   <ion-item-options side="start">
-    <ion-item-option (click)="delete.emit(animal); sliding.close()">
-      <ion-icon slot="icon-only" name="trash"></ion-icon>
+    <ion-item-option id="delete" (click)="delete.emit(animal); sliding.close()">
+      <ion-icon  slot="icon-only" name="trash"></ion-icon>
     </ion-item-option>
   </ion-item-options>
 </ion-item-sliding>
