--- a/src/app/main/components/vacina/vacina.component.html
+++ b/src/app/main/components/vacina/vacina.component.html
@@ -6,9 +6,11 @@
 
   <ion-item-options side="start">
     <ion-item-option
+    id="delete"
       (click)="delete.emit(vacina); sliding.close()"
     >
       <ion-icon
+      id="delete"
         slot="icon-only"
         name="trash"
       ></ion-icon>
