--- a/src/app/main/macho-list/macho-list.page.html
+++ b/src/app/main/macho-list/macho-list.page.html
@@ -20,7 +20,8 @@
     horizontal="end"
     slot="fixed"
   >
-    <ion-fab-button>
+    <ion-fab-button id="fab" routerLink="/main/create-male"
+      routerDirection="forward">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
