--- a/src/app/main/page/main.page.scss
+++ b/src/app/main/page/main.page.scss
@@ -1,4 +1,4 @@
-ion-card{
+#gender{
   background-color: #de4307;
 
   ion-card-content{
@@ -12,4 +12,8 @@ ion-card{
       color:white;
     }
   }
+}
+
+#numbers{
+  background-color: #f29c2b;
 }
