Vacina funcionando(com gambiarra) - 01/10

--- a/src/app/main/components/vacina/vacina.component.html
+++ b/src/app/main/components/vacina/vacina.component.html
@@ -1,5 +1,5 @@
 <ion-item-sliding #sliding>
-  <ion-item (click)="update.emit(vacina)">
+  <ion-item >
     <p>{{ vacina.nome }}</p>
     <p slot="end">{{vacina.data}}</p>
   </ion-item>
