Montas e Partos implementados - 6/10

--- a/src/app/main/macho-list/macho-list.page.html
+++ b/src/app/main/macho-list/macho-list.page.html
@@ -11,7 +11,7 @@
       <app-animal-item *ngFor="let animal of animals" [animal]="animal" (update)="onUpdate($event)" (delete)="onDelete($event)"></app-animal-item>
     </ng-container>
     <ng-template #noAnimals>
-      <ion-item lines="none">Sem animais ainda...</ion-item>
+      <ion-item lines="none">Sem machos ainda...</ion-item>
     </ng-template>
   </ion-list>
 
