--- a/src/global.scss
+++ b/src/global.scss
@@ -33,6 +33,12 @@ ion-header,ion-content {
   --ion-background-color: #f6d04d;
 }
 
+ion-button{
+
+--ion-background-color: #8bc24c;
+  color: white;
+}
+
 ion-input {
   background-color: transparent;
 }
