--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,11 @@
       <ion-menu-toggle autoHide="false">
         <ion-list>
 
+          <ion-item button routerLink="/main">
+            <ion-icon slot="icon-only"></ion-icon>
+            <ion-label>Início</ion-label>
+          </ion-item>
+
           <ion-item button routerLink="/main/male-list">
             <ion-icon slot="icon-only"></ion-icon>
             <ion-label>Lista de Machos</ion-label>
