--- a/src/app/main/animals-save/animals-save.page.html
+++ b/src/app/main/animals-save/animals-save.page.html
@@ -50,12 +50,25 @@
       ></ion-input>
     </ion-item>
 
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col size="4">
+          <ion-button class="color" (click)="onVacina(animalId)"> Vacinas </ion-button>
+        </ion-col>
+        <ion-col size="4">
+          <ion-button (click)="onMontas(animalId)"> Montas </ion-button>
+        </ion-col>
+        <ion-col size="4">
+          <ion-button (click)="onPartos(animalId)"> Partos </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
 
-    <ion-button (click)="saveVacinas()"> Vacinas </ion-button>
-
-    <ion-button (click)="montasAndPartos()"> Montas e Partos </ion-button>
-
-    <ion-button type="submit" [disabled]="animalForm.invalid" expand="full" fill="clear"
+    <ion-button
+      type="submit"
+      [disabled]="animalForm.invalid"
+      expand="full"
+      fill="clear"
       >Salvar</ion-button
     >
   </form>
