--- a/src/app/main/page/main.page.html
+++ b/src/app/main/page/main.page.html
@@ -1,51 +1,109 @@
 <ion-header>
   <ion-toolbar>
-    <app-menu-toggle
-      slot="start"
-      menu="main-menu"
-    ></app-menu-toggle>
+    <app-menu-toggle slot="start" menu="main-menu"></app-menu-toggle>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-item *ngIf="user" >
-    <p >{{user.displayName}}</p>
+  <ion-item *ngIf="user">
+    <p>{{user.displayName}}</p>
     <p slot="end">{{date}}</p>
   </ion-item>
   <ion-grid fixed>
     <ion-row>
       <ion-col size="6">
-        <ion-card routerLink="/main/male-list"id="gender">
-          <ion-card-content>Você possui
-             <h1 ></h1>
-             machos
-
-             <p >Confira a lista</p>
+        <ion-card routerLink="/main/male-list" id="gender">
+          <ion-card-content>
+            Você possui
+            <h1>{{males}}</h1>
+            machos
+            <p>Confira a lista</p>
           </ion-card-content>
         </ion-card>
-
       </ion-col>
       <ion-col size="6">
-
         <ion-card routerLink="/main/female-list" id="gender">
-          <ion-card-content>Você possui <h1>40</h1> fêmeas
-          <p  >Confira a lista</p>
+          <ion-card-content>
+            Você possui
+            <h1>{{females}}</h1>
+            fêmeas
+            <p>Confira a lista</p>
           </ion-card-content>
         </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
 
-  <ion-card id="numbers">
-    <ion-card-content>Bezerros</ion-card-content>
+  <ion-card class="taxas">
+    <ion-card-content>
+      <ion-grid fixed>
+        <ion-row>
+          <ion-col size="4">
+            <p>Taxa de Prenhes</p>
+          </ion-col>
+          <ion-col size="4">
+            <p>Taxa de Concepção</p>
+          </ion-col>
+          <ion-col size="4">
+            <p>Taxa de Desmame</p>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col size="4">
+            <h1>13%</h1>
+          </ion-col>
+          <ion-col size="4">
+            <h1>13%</h1>
+          </ion-col>
+          <ion-col size="4">
+            <h1>13%</h1>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
   </ion-card>
-  <ion-card id="numbers">
-    <ion-card-content>Bezerros em recria</ion-card-content>
-  </ion-card>
-  <ion-card id="numbers">
-    <ion-card-content>Novilhas</ion-card-content>
-  </ion-card>
-  <ion-card id="numbers">
-    <ion-card-content>Prenhes</ion-card-content>
-  </ion-card>
+
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col>
+        <ion-card id="numbers">
+          <ion-card-content>
+              <ion-label >Bezerros mamando</ion-label>
+              <p>{{ mamando }}</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col >
+        <ion-card id="numbers">
+          <ion-card-content>
+            <ion-label >Bezerros desmamados</ion-label>
+              <p>{{desmamando}}</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col >
+        <ion-card id="numbers">
+          <ion-card-content>
+            <ion-label >Novilhas</ion-label>
+              <p>45</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col >
+        <ion-card id="numbers">
+          <ion-card-content>
+            <ion-label >Prenhes</ion-label>
+              <p>45</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
