Qtd de Novilhas e Prenhes(marromeno) - 20/10

--- a/src/app/main/page/main.page.html
+++ b/src/app/main/page/main.page.html
@@ -70,7 +70,7 @@
         <ion-card id="numbers">
           <ion-card-content>
               <ion-label >Bezerros mamando</ion-label>
-              <p>{{ mamando }}</p>
+              <p>{{mamando}}</p>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -80,7 +80,7 @@
         <ion-card id="numbers">
           <ion-card-content>
             <ion-label >Bezerros desmamados</ion-label>
-              <p>{{desmamando}}</p>
+              <p>{{ desmamado }}</p>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -90,7 +90,7 @@
         <ion-card id="numbers">
           <ion-card-content>
             <ion-label >Novilhas</ion-label>
-              <p>45</p>
+              <p>{{novilhas}}</p>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -100,7 +100,7 @@
         <ion-card id="numbers">
           <ion-card-content>
             <ion-label >Prenhes</ion-label>
-              <p>45</p>
+              <p>{{prenhes}}</p>
           </ion-card-content>
         </ion-card>
       </ion-col>
