--- a/src/app/main/page/main.page.html
+++ b/src/app/main/page/main.page.html
@@ -51,13 +51,13 @@
 
         <ion-row>
           <ion-col size="4">
-            <h1>13%</h1>
+            <h1>{{prenhez}}%</h1>
           </ion-col>
           <ion-col size="4">
-            <h1>13%</h1>
+            <h1>{{concepcao}}%</h1>
           </ion-col>
           <ion-col size="4">
-            <h1>13%</h1>
+            <h1>{{desmame}}%</h1>
           </ion-col>
         </ion-row>
       </ion-grid>
