--- a/src/app/main/vacinas-femea/vacinas-femea.page.html
+++ b/src/app/main/vacinas-femea/vacinas-femea.page.html
@@ -30,6 +30,8 @@
       class="submit-btn"
       type="submit"
       (click)="saveVacina()"
+      id="submit"
+      expand="full"
       [disabled]="vacinaForm.invalid"
     >
       Salvar
