--- a/src/app/main/monta/monta.page.html
+++ b/src/app/main/monta/monta.page.html
@@ -27,8 +27,10 @@
     <ion-button
       class="submit-btn"
       type="submit"
+      id="submit"
       (click)="saveMonta()"
       [disabled]="montaForm.invalid"
+      expand="full"
     >
       Salvar
     </ion-button>
