--- a/src/app/main/parto/parto.page.html
+++ b/src/app/main/parto/parto.page.html
@@ -27,6 +27,8 @@
     <ion-button
       class="submit-btn"
       type="submit"
+      id="submit"
+      expand="full"
       (click)="saveParto()"
       [disabled]="partoForm.invalid"
     >
