Curral Digital - Beta Version

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,7 +12,9 @@
           Acompanhe a evolução dos seus animais e melhore sua produção
         </h1>
 
-        <ion-button color="danger" routerLink="/login">Começar</ion-button>
+        <button id="start" (click)="button()">
+          COMEÇAR
+        </button>
       </ion-col>
     </ion-row>
   </ion-grid>
