--- a/src/app/main/animal-list/animal-list.page.html
+++ b/src/app/main/animal-list/animal-list.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-back-button slot="start" defaultHref="main"></ion-back-button>
-    <ion-title>Lista de Animais</ion-title>
+    <ion-title>Lista de Fêmeas</ion-title>
   </ion-toolbar>
 </ion-header>
 
