--- a/src/app/main/components/peso/peso.component.html
+++ b/src/app/main/components/peso/peso.component.html
@@ -1,6 +1,6 @@
 <ion-item-sliding #sliding>
   <ion-item >
-    <p>{{ peso.peso }}</p>
+    <p>{{ peso.peso }}@</p>
     <p slot="end">{{peso.data}}</p>
   </ion-item>
 
