--- a/src/app/main/page/main.page.html
+++ b/src/app/main/page/main.page.html
@@ -39,7 +39,7 @@
       <ion-grid fixed>
         <ion-row>
           <ion-col size="4">
-            <p>Taxa de Prenhes</p>
+            <p>Taxa de Prenhez</p>
           </ion-col>
           <ion-col size="4">
             <p>Taxa de Concepção</p>
