--- a/src/app/main/vacinas/vacinas.page.html
+++ b/src/app/main/vacinas/vacinas.page.html
@@ -10,16 +10,16 @@
   <form [formGroup]="vacinaForm">
     <ion-list>
       <ion-item>
+        <ion-label>Nome</ion-label>
         <ion-input
-          placeholder="Nome"
           type="text"
           formControlName="nome"
           #nome
         ></ion-input>
       </ion-item>
       <ion-item>
+        <ion-label>Data: </ion-label>
         <ion-input
-          placeholder="Data"
           type="date"
           formControlName="data"
           #data
