--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
 
           <ion-item button routerLink="/main/female-list">
             <ion-icon slot="icon-only"></ion-icon>
-            <ion-label>Lista de Femeas</ion-label>
+            <ion-label>Lista de Fêmeas</ion-label>
           </ion-item>
           <ion-item button (click)="logout()">
             <ion-icon slot="icon-only"></ion-icon>
