--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -6,4 +6,13 @@ h1 ion-icon {
   height: 5em;
 }
 
+#start{
+  background-color: #de4307;
+  color: white;
+  font-size:1.2rem;
+  padding: 0.85rem;
+  border-radius: 0.4rem;
+  margin-top: 2rem;
+}
+
 
