--- a/src/app/main/animals-save/animals-save.page.html
+++ b/src/app/main/animals-save/animals-save.page.html
@@ -44,22 +44,22 @@
     <ion-grid fixed>
       <ion-row>
         <ion-col size="4">
-          <ion-button id="wing" (click)="onVacina(animalId)">
+          <ion-button id="wing" (click)="onVacina(animalId)" [disabled]="pageTitle ==='Novo Animal'">
             Vacinas
           </ion-button>
         </ion-col>
         <ion-col size="4">
-          <ion-button id="wing" (click)="onMontas(animalId)">
+          <ion-button id="wing" (click)="onMontas(animalId)" [disabled]="animalForm.get('apartação').value === ''">
             Montas
           </ion-button>
         </ion-col>
         <ion-col size="4">
-          <ion-button id="wing" (click)="onPartos(animalId)">
+          <ion-button id="wing" (click)="onPartos(animalId)" [disabled]="animalForm.get('apartação').value === ''">
             Partos
           </ion-button>
         </ion-col>
         <ion-col size="4">
-          <ion-button id="wing" (click)="onPeso(animalId)">
+          <ion-button id="wing" (click)="onPeso(animalId)" [disabled]="pageTitle ==='Novo Animal'">
             Pesagens
           </ion-button>
         </ion-col>
