--- a/src/app/main/parto/parto.page.html
+++ b/src/app/main/parto/parto.page.html
@@ -9,15 +9,15 @@
   <form [formGroup]="partoForm">
     <ion-list>
       <ion-item>
+        <ion-label>Ordem: </ion-label>
         <ion-input
-          placeholder="Ordem"
           type="number"
           formControlName="ordem"
         ></ion-input>
       </ion-item>
       <ion-item>
+        <ion-label>Data: </ion-label>
         <ion-input
-          placeholder="Data"
           type="date"
           formControlName="data"
           #data
