--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <ion-menu contentId="menu-content" menuId="main-menu" [disabled]="true">
     <ion-header>
       <ion-toolbar>
-        <ion-icon src="assets/icon/cerca.svg" slot="start"></ion-icon>
+        <ion-icon src="assets/icon/cerca.svg" slot="start" id="fence"></ion-icon>
         <p *ngIf="user">{{ user.displayName }}</p>
       </ion-toolbar>
     </ion-header>
@@ -12,21 +12,21 @@
         <ion-list>
 
           <ion-item button routerLink="/main">
-            <ion-icon slot="icon-only"></ion-icon>
+            <ion-icon id="icon" name="home"></ion-icon>
             <ion-label>Início</ion-label>
           </ion-item>
 
           <ion-item button routerLink="/main/male-list">
-            <ion-icon slot="icon-only"></ion-icon>
+            <ion-icon id="icon" src="assets/icon/boi.svg"></ion-icon>
             <ion-label>Lista de Machos</ion-label>
           </ion-item>
 
           <ion-item button routerLink="/main/female-list">
-            <ion-icon slot="icon-only"></ion-icon>
+            <ion-icon id="icon" src="assets/icon/cow.svg"></ion-icon>
             <ion-label>Lista de Fêmeas</ion-label>
           </ion-item>
           <ion-item button (click)="logout()">
-            <ion-icon slot="icon-only"></ion-icon>
+            <ion-icon id="icon" name="exit"></ion-icon>
             <ion-label>Sair</ion-label>
           </ion-item>
         </ion-list>
