--- a/src/app/main/page/main.page.html
+++ b/src/app/main/page/main.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <app-menu-toggle slot="start" menu="main-menu"></app-menu-toggle>
+    <app-menu-toggle
+      slot="start"
+      menu="main-menu"
+    ></app-menu-toggle>
   </ion-toolbar>
 </ion-header>
 
@@ -12,7 +15,10 @@
   <ion-grid fixed>
     <ion-row>
       <ion-col size="6">
-        <ion-card routerLink="/main/male-list" id="gender">
+        <ion-card
+          routerLink="/main/male-list"
+          id="gender"
+        >
           <ion-card-content>
             Você possui
             <h1>{{males}}</h1>
@@ -22,7 +28,10 @@
         </ion-card>
       </ion-col>
       <ion-col size="6">
-        <ion-card routerLink="/main/female-list" id="gender">
+        <ion-card
+          routerLink="/main/female-list"
+          id="gender"
+        >
           <ion-card-content>
             Você possui
             <h1>{{females}}</h1>
@@ -69,41 +78,50 @@
       <ion-col>
         <ion-card id="numbers">
           <ion-card-content>
-              <ion-label >Bezerros mamando</ion-label>
-              <p>{{mamando}}</p>
+            <ion-label>Bezerros mamando</ion-label>
+            <p>{{mamando}}</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col>
+        <ion-card id="numbers">
+          <ion-card-content>
+            <ion-label>Machos desmamados</ion-label>
+            <p>{{ desmamado }}</p>
+
           </ion-card-content>
         </ion-card>
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col >
+      <ion-col>
         <ion-card id="numbers">
           <ion-card-content>
-            <ion-label >Bezerros desmamados</ion-label>
-              <p>{{ desmamado }}</p>
+            <ion-label>Fêmeas desmamadas</ion-label>
+            <p>{{desmamadoF}}</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+
+      <ion-col>
+        <ion-card id="numbers">
+          <ion-card-content>
+            <ion-label>Vacas em cobertura</ion-label>
+            <p>{{cobertura}}</p>
           </ion-card-content>
         </ion-card>
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col >
+      <ion-col>
         <ion-card id="numbers">
           <ion-card-content>
-            <ion-label >Novilhas</ion-label>
-              <p>{{novilhas}}</p>
+            <ion-label>Prenhes</ion-label>
+            <p>{{prenhes}}</p>
           </ion-card-content>
         </ion-card>
       </ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col >
-        <ion-card id="numbers">
-          <ion-card-content>
-            <ion-label >Prenhes</ion-label>
-              <p>{{prenhes}}</p>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
+    <ion-row></ion-row>
   </ion-grid>
 </ion-content>
